[package]
name = "axum-fly-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }